# calculadora

./: CMakeLists.txt  README.md  setup.py
header/: source.h
src/: CMakeLists.txt  main.c
src/divisao/: CMakeLists.txt  divisao.c
src/produto/: CMakeLists.txt  produto.c
src/soma/: CMakeLists.txt  soma.c
src/subtracao/: CMakeLists.txt  subtracao.c
tests/: libs_tests.py  loadingLibrary.c  loadingLibrary.py
